Allow building java 1.8 with java 11 and allow building with java8 as well