@@ -31,6 +31,7 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
@@ -254,7 +255,7 @@ public final class LarkyEvaluator {
         return null;
       }
 
-      return Path.of(resourceAsURI);
+      return Paths.get(resourceAsURI);
     }
 
     @SuppressWarnings("UnstableApiUsage")
